--- a/responsive-css/style.css
+++ b/responsive-css/style.css
@@ -381,7 +381,7 @@ body{
     display: flex;
    justify-content: center;
    flex-direction: column;
-   font-size: 25px;
+   font-size: 45px;
    align-items: center;
    font-weight: bold;
 }
@@ -412,4 +412,34 @@ body{
     border: none;
     width: 60vh;
     height: 30px;
+}
+
+.quest .input-1{
+    flex-direction: row;
+    display: flex;
+    width: 100%;
+    height: 10vh;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.input-1 input{
+    display: flex;
+    width: 35vh;
+    margin: 2vh;
+    height: 7vh;
+    padding-left: 5vh;
+    font-size: 20px;
+}
+
+.select{
+    width: 55vh;
+    height: 5vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 2vh;
+    border-radius: 50px ;
 }
